# slmcortex

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  api_contract_fastapi_skill_v2_output_contract_design.md  pyproject.toml
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  docs_improvement.yml
.github/workflows/: demo.yml  distribution.yml  pytest.yml
configs/: base.yaml  prototype.yaml
data/: eval.jsonl
docs/: README.md  five-seed-artifact-resume.md  flop-efficient-coding-intelligence.md  repo-boundary-map.md  research-results.md  research-workflow.md  skill-package-contract.md
docs/architecture/: agent-runtime.md  runtime-core.md  skill-composer.md  skill-factory.md
docs/releases/: v0.1.0.md
docs/user-guide/: command-reference.md  local-coding-agent-setup.md  packaged-install.md  quickstart.md
evaluation/: README.md  __init__.py  run.py  schema.json  score.py
examples/: .gitignore  README.md
examples/evaluation/: tasks.jsonl
examples/fastapi_contract_tiny/: README.md  eval.jsonl  request.json  train.jsonl
reports/: five-seed-artifact-resume.md  research-results.md
scripts/: benchmark_dynamic_router.py  build_alternating_skill_data.py  build_api_contract_fastapi_candidate_data.py  build_api_contract_fastapi_candidate_data_v2.py  build_skillcortex_router_v1_report.py  run_alternating_skill_experiment.py  run_api_contract_fastapi_candidate_training.py  run_composition_control.py  run_dynamic_adaptive_smoke.py  run_dynamic_agent_acceptance_harness.py  run_package_product_smoke.py  run_packaged_install_smoke.py  run_python_skill_gating.py  run_python_skill_gating_validation.py  run_python_skill_recovery.py  run_skillcortex_arbitrary_skill_smoke.py  run_skillcortex_demo.py  select_failure_cluster.py
skills/: skill_registry.json  skills.yaml
src/: catalog.py  composer_app.py  contracts.py  skillcortex.py
src/agent/: __init__.py  context.py  reporting.py  sandbox.py  service.py  steps.py
src/cli/: __init__.py  common.py  handlers.py  parser.py
src/composer/: __init__.py  adapters.py  bundle.py  compatibility.py  loading.py  routing.py
src/dataset_factory/: __init__.py  constants.py  generation.py  rendering.py
src/datasets/: __init__.py  analysis.py
src/packaging/: __init__.py  artifacts.py  composition.py  importers.py  manifests.py  ops.py  validation.py
src/repo_brain/: __init__.py  __main__.py  cli.py  commands.py  config.py  indexer.py  language_detection.py  models.py  patches.py  rendering.py  repository.py  text.py
src/runtime/: __init__.py  dynamic.py  generation.py  http.py  loading.py  models.py  registry.py  request.py  router_rules.py  routing.py
src/shared/: __init__.py  config.py  hashing.py  io.py  project.py
src/skill_lattice_coder/: adapter_registry.py  cli.py  compose.py  data.py  evaluation.py  inference.py  metrics.py  model_loader.py  (+3 more)
tests/: test_alternating_skill_experiment.py  test_api_contract_fastapi_candidate_data.py  test_api_contract_fastapi_candidate_data_v2.py  test_api_contract_fastapi_candidate_training.py  test_api_contract_fastapi_v2_contract_validation.py  test_api_contract_fastapi_v2_reference_schema.py  test_catalog.py  test_cli.py  test_composition_control.py  test_data.py  test_evaluation.py  test_execution.py  test_failure_cluster_selection.py  test_indexer.py  test_inference.py  test_language_detection.py  test_metrics.py  test_model_loader.py  test_python_skill_gating.py  test_python_skill_gating_validation.py  test_python_skill_recovery.py  test_repository.py  test_router.py  test_skillcortex_agent.py  test_skillcortex_boundary.py  test_skillcortex_cli.py  test_skillcortex_demo.py  test_skillcortex_router_v1.py  test_skillcortex_runtime.py  test_sqlite_store.py
(+119 files in other folders)
