[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "skillcortex"
version = "0.1.0"
description = "Package-first runtime for composable AI coding skills"
readme = "README.md"
requires-python = ">=3.11"
license = { file = "LICENSE" }
keywords = ["agents", "coding", "lora", "packaging", "runtime"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
urls = { Homepage = "https://github.com/alvarolorentedev/crazy-coding-llm", Repository = "https://github.com/alvarolorentedev/crazy-coding-llm", Issues = "https://github.com/alvarolorentedev/crazy-coding-llm/issues" }
dependencies = ["mlx-lm>=0.31,<0.32", "PyYAML>=6,<7"]

[project.optional-dependencies]
test = [
    "fastapi==0.138.0",
    "httpx==0.28.1",
    "pydantic==2.13.4",
    "pytest>=8,<10",
]

[project.scripts]
skill-lattice = "skill_lattice_coder.cli:main"
skillcortex = "skillcortex.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
